[package]
name = "rosu_nps"
version = "1.0.0"
edition = "2021"
authors = ["Osef0760 <osefcode@gmail.com"]

[lib]
name = "rosu_nps"
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.12"
rosu-map = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
