[package]
name = "rosu_nps"
version = "1.0.1"
edition = "2021"
authors = ["Osef0760 <osefcode@gmail.com>"]
description = "A library for analyzing note density and distribution in osu! beatmaps"
license = "MIT"
repository = "https://github.com/OsuChecker/rosu-nps.git"
keywords = ["osu", "rhythm-game", "analysis", "beatmap"]
categories = ["games", "algorithms", "mathematics"]
readme = "README.md"

[lib]
name = "rosu_nps"
crate-type = ["cdylib", "rlib"]

[dependencies]
rosu-map = "0.2.0"

[dev-dependencies]
criterion = "0.5.1"
lazy_static = "1.5.0"

[[bench]]
name = "benches"
harness = false
