[package]
name = "rosu-nps"
version = "2.0.0"
edition = "2024"
authors = ["Osef0760 <osefcode@gmail.com>"]
description = "A library for analyzing note density and distribution in osu! beatmaps"
license = "MIT"
repository = "https://github.com/OsuChecker/rosu-nps.git"
keywords = ["osu", "rhythm-game", "analysis", "beatmap"]
categories = ["games", "algorithms", "mathematics"]
readme = "README.md"

[lib]
name = "rosu_nps"
path = "src/lib.rs"

[[bench]]
name = "nps_benchmark"
harness = false

[dependencies]
rayon = "1.10.0"
rosu-map = "0.2.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
criterion = "0.6.0"
